--- a/TestWPPL/SuperAdminWindow.xaml
+++ b/TestWPPL/SuperAdminWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestWPPL"
         mc:Ignorable="d"
-        Title="AdminWindow" Height="720" Width="1320">
+        Title="SuperAdminWindow" Height="720" Width="1320">
     <Grid>
         <DockPanel HorizontalAlignment="Stretch" Height="300" VerticalAlignment="Top" Margin="156,0,0,0" LastChildFill="False">
             <DockPanel.Background>
@@ -26,13 +26,13 @@
             </Canvas>
             <Button Name="health_agency_btn" Margin="0,50,0,0" HorizontalAlignment="Left" FontFamily="Poppins" FontSize="10" DockPanel.Dock="Top" Width="147" Height="41" Click="listHealthAgencyBtnClick" Background="{x:Null}" BorderBrush="{x:Null}" RenderTransformOrigin="0.495,-0.237" HorizontalContentAlignment="Left">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="assets/images/clinic.png" Width="20" Height="14" Margin="0,0,7,0"/>
+                    <Image Source="pack://application:,,,/assets/images/clinic.png" Width="20" Height="14" Margin="0,0,7,0"/>
                     <TextBlock Foreground="#3C3C3C"><Run Foreground="#3C3C3C" Text="List Health Agency"/></TextBlock>
                 </StackPanel>
             </Button>
             <Button Name="user_btn" Margin="0,10,0,0" HorizontalAlignment="Left" FontFamily="Poppins" FontSize="10" DockPanel.Dock="Top" Width="147" Height="41" Click="listUserBtnClick" Background="{x:Null}" BorderBrush="{x:Null}" RenderTransformOrigin="0.495,-0.237" HorizontalContentAlignment="Left">
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="assets/images/list.png" Width="20" Height="14" Margin="0,0,8,0"/>
+                    <Image Source="pack://application:,,,/assets/images/list.png" Width="20" Height="14" Margin="0,0,8,0"/>
                     <TextBlock Foreground="#3C3C3C"><Run Foreground="#3C3C3C" Text="List User"/></TextBlock>
                 </StackPanel>
             </Button>
