--- a/TestWPPL/SuperAdmin/ListPolyMaster/EditPolyMaster/EditPolyMasterPage.xaml
+++ b/TestWPPL/SuperAdmin/ListPolyMaster/EditPolyMaster/EditPolyMasterPage.xaml
@@ -1,17 +1,13 @@
-﻿<basic:MyPage x:Class="TestWPPL.SuperAdmin.ListPolyMaster.ListPolyMasterPage"
+﻿<basic:MyPage x:Class="TestWPPL.SuperAdmin.ListPolyMaster.EditPolyMaster.EditPolyMasterPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:TestWPPL.SuperAdmin.ListPolyMaster"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:local="clr-namespace:TestWPPL.SuperAdmin.ListPolyMaster.EditPolyMaster"
       xmlns:basic="clr-namespace:Velacro.UIElements.Basic;assembly=Velacro"
       mc:Ignorable="d"
-      d:DesignHeight="550" d:DesignWidth="1000"
-      Title="ListPolyMasterPage">
-    <Grid Margin="8">
-        <DataGrid IsReadOnly="True">
-            
-        </DataGrid>
+      Title="EditPolyMasterPage" Height="450" Width="800">
+    <Grid>
+        
     </Grid>
 </basic:MyPage>
