--- a/TestWPPL/SuperAdminWindow.xaml
+++ b/TestWPPL/SuperAdminWindow.xaml
@@ -30,6 +30,12 @@
                     <TextBlock Foreground="#3C3C3C"><Run Foreground="#3C3C3C" Text="List Health Agency"/></TextBlock>
                 </StackPanel>
             </Button>
+            <Button Name="poly_master_btn" Margin="0,10,0,0" HorizontalAlignment="Left" FontFamily="Poppins" FontSize="10" DockPanel.Dock="Top" Width="147" Height="41" Click="listPolyMasterBtnClick" Background="{x:Null}" BorderBrush="{x:Null}" RenderTransformOrigin="0.495,-0.237" HorizontalContentAlignment="Left">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="pack://application:,,,/assets/images/puskesmas.png" Width="20" Height="14" Margin="0,0,7,0"/>
+                    <TextBlock Foreground="#3C3C3C"><Run Foreground="#3C3C3C" Text="List Poly Master"/></TextBlock>
+                </StackPanel>
+            </Button>
             <Button Name="user_btn" Margin="0,10,0,0" HorizontalAlignment="Left" FontFamily="Poppins" FontSize="10" DockPanel.Dock="Top" Width="147" Height="41" Click="listUserBtnClick" Background="{x:Null}" BorderBrush="{x:Null}" RenderTransformOrigin="0.495,-0.237" HorizontalContentAlignment="Left">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="pack://application:,,,/assets/images/list.png" Width="20" Height="14" Margin="0,0,8,0"/>
