--- a/TestWPPL/SuperAdmin/ListPolyMaster/ListPolyMasterPage.xaml
+++ b/TestWPPL/SuperAdmin/ListPolyMaster/ListPolyMasterPage.xaml
@@ -13,6 +13,9 @@
         <DataGrid Margin="0,50,0,0" IsReadOnly="true" HorizontalContentAlignment="Center" Name="DgPolyMasters" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Nama Master Poli" Binding="{Binding name}" Width = "700" MinWidth="300"/>
+                <!--
+                <DataGridTextColumn Header="Picture" Binding="{Binding image}" />
+                -->
 
                 <DataGridTemplateColumn Header="Action">
                     <DataGridTemplateColumn.CellTemplate>
